# aoc2021

./: .gitignore  aoc2021.cabal
src/: Day1A.hs  Day1B.hs  Day2A.hs  Day2B.hs  Day3A.hs
